--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -36,16 +36,22 @@
                     </div>
                 </div>
             </div>
-            {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-                <div class="grid-x grid-padding-x">
-                    <div class="cell large-auto ticker-cell">
-                        <div class="grid-y ticker-cell-content">
-                            <div class="cell ticker-cell-title">Estimated network speed (15m)</div>
-                            <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
-                        </div>
+            <div class="grid-x grid-padding-x">
+                {% if not "DEBUG_SKIP_COINBASE" | get_env %}
+                <div class="cell large-3 ticker-cell">
+                    <div class="grid-y ticker-cell-content">
+                        <div class="cell ticker-cell-title">Estimated network speed (15m)</div>
+                        <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
                     </div>
                 </div>
-            {% endif %}
+                {% endif %}
+                <div class="cell large-3 ticker-cell">
+                    <div class="grid-y ticker-cell-content">
+                        <div class="cell ticker-cell-title">Validator participation rate (1h)</div>
+                        <div class="cell auto ticker-cell-data">{{ "%0.2f" | format(participation_rate * 100) }}%</div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div id="recent-blocks">
