add unconfirmed transaction frontend

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -43,6 +43,7 @@
                         <li><a href="/blocks">Blocks</a></li>
                         <li><a href="/validators">Validators</a></li>
                         <li><a href="/programs">Programs</a></li>
+                        <li><a href="/unconfirmed_transactions">Unconfirmed transactions</a></li>
                     </ul>
                 </li>
                 <li>
