--- a/webui/templates/htmx/unconfirmed_transactions.jinja2
+++ b/webui/templates/htmx/unconfirmed_transactions.jinja2
@@ -22,7 +22,7 @@
                 <tbody hx-boost="true" hx-target="#htmx-body" hx-swap="innerHTML show:no" hx-push-url="true">
                 {% for transaction in transactions %}
                     <tr>
-                        <td><a href="/transaction?h={{ transaction.tx_id }}">{{ transaction.tx_id }}</a></td>
+                        <td><span class="mono"><a href="/transaction?h={{ transaction.tx_id }}">{{ transaction.tx_id }}</a></span></td>
                         <td>{{ transaction.first_seen | format_time | safe }}</td>
                         <td>{{ transaction.type }}</td>
                     </tr>
