--- a/webui/templates/htmx/transaction.jinja2
+++ b/webui/templates/htmx/transaction.jinja2
@@ -80,23 +80,36 @@
             {% call data_line("Total fee") %}
                 {{ total_fee | format_aleo_credit | safe }} Aleo credits
             {% endcall %}
-            {% if type == "Execute" %}
-                {% call sub_data_line("Breakdown") %}
-                    <span class="box-drawing">├</span> Storage fee: {{ storage_cost | format_aleo_credit | safe }}<br>
-                    <span class="box-drawing">├</span> Finalize fee: {{ finalize_costs | sum | format_aleo_credit | safe }}<br>
-                    {% for cost in finalize_costs %}
-                        <span class="box-drawing">│{% if loop.revindex0 == 0 %}└{% else %}├{% endif %}</span> Transition #{{ loop.index0 }}: {{ cost | format_aleo_credit | safe }}<br>
-                    {% endfor %}
-                    <span class="box-drawing">├</span> Priority fee: {{ priority_fee | format_aleo_credit | safe }}<br>
-                    <span class="box-drawing">└</span> Burnt fee: {{ burnt_fee | format_aleo_credit | safe }}
-                {% endcall %}
-            {% elif type == "Deploy" %}
-                {% call sub_data_line("Breakdown") %}
-                    <span class="box-drawing">├</span> Storage fee: {{ storage_cost | format_aleo_credit | safe }}<br>
-                    <span class="box-drawing">├</span> Namespace fee: {{ namespace_cost | format_aleo_credit | safe }}<br>
-                    <span class="box-drawing">├</span> Priority fee: {{ priority_fee | format_aleo_credit | safe }}<br>
-                    <span class="box-drawing">└</span> Burnt fee: {{ burnt_fee | format_aleo_credit | safe }}
-                {% endcall %}
+            {% if state != "Unconfirmed" %}
+                {% if type == "Execute" %}
+                    {% call sub_data_line("Breakdown") %}
+                        <span class="box-drawing">├</span> Storage fee: {{ storage_cost | format_aleo_credit | safe }}<br>
+                        <span class="box-drawing">├</span> Finalize fee: {{ finalize_costs | sum | format_aleo_credit | safe }}<br>
+                        {% for cost in finalize_costs %}
+                            <span class="box-drawing">│{% if loop.revindex0 == 0 %}└{% else %}├{% endif %}</span> Transition #{{ loop.index0 }}: {{ cost | format_aleo_credit | safe }}<br>
+                        {% endfor %}
+                        <span class="box-drawing">├</span> Priority fee: {{ priority_fee | format_aleo_credit | safe }}<br>
+                        <span class="box-drawing">└</span> Burnt fee: {{ burnt_fee | format_aleo_credit | safe }}
+                    {% endcall %}
+                {% elif type == "Deploy" %}
+                    {% call sub_data_line("Breakdown") %}
+                        <span class="box-drawing">├</span> Storage fee: {{ storage_cost | format_aleo_credit | safe }}<br>
+                        <span class="box-drawing">├</span> Namespace fee: {{ namespace_cost | format_aleo_credit | safe }}<br>
+                        <span class="box-drawing">├</span> Priority fee: {{ priority_fee | format_aleo_credit | safe }}<br>
+                        <span class="box-drawing">└</span> Burnt fee: {{ burnt_fee | format_aleo_credit | safe }}
+                    {% endcall %}
+                {% endif %}
+            {% else %}
+                {% if type == "Execute" %}
+                    {% call sub_data_line("Breakdown") %}
+                        <span class="box-drawing">├</span> Base fee: {{ (storage_cost + (finalize_costs | sum) + burnt_fee) | format_aleo_credit | safe }}<br>
+                        <span class="box-drawing">└</span> Priority fee: {{ priority_fee | format_aleo_credit | safe }}<br>{% endcall %}
+                {% elif type == "Deploy" %}
+                    {% call sub_data_line("Breakdown") %}
+                        <span class="box-drawing">├</span> Base fee: {{ (storage_cost + namespace_cost + burnt_fee) | format_aleo_credit | safe }}<br>
+                        <span class="box-drawing">└</span> Priority fee: {{ priority_fee | format_aleo_credit | safe }}<br>
+                    {% endcall %}
+                {% endif %}
             {% endif %}
         </div>
 
