add back light node and node list page

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -44,6 +44,7 @@
                         <li><a href="/validators">Validators</a></li>
                         <li><a href="/programs">Programs</a></li>
                         <li><a href="/unconfirmed_transactions">Unconfirmed transactions</a></li>
+                        <li><a href="/nodes">Nodes</a></li>
                     </ul>
                 </li>
                 <li>
