fix span display

--- a/webui/templates/htmx/tools.jinja2
+++ b/webui/templates/htmx/tools.jinja2
@@ -163,7 +163,7 @@
                 </label>
             </form>
             <span id="estimate_result" style="padding: 0 15px"></span><br>
-            <span id="constraint_result" style="padding: 0 15px"></span>
+            <span id="constraint_result" style="padding: 0 15px; display: block"></span>
         </div>
     </div>
 
